adding refactored python libraries fixing c code

--- a/c/README
+++ b/c/README
@@ -31,6 +31,13 @@ To receive messages from an SQS queue:
 
 ----------------------------------------------------------------
 
+Threading
+
+The receiver uses a persistent CURL connection.  This means you can 
+use it in only one thread.
+
+-----------------------------------------------------------------
+
 
 
 
